--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "yukke.org",
   "license": "MIT",
   "dependencies": {
+    "config": "^1.28.1",
     "express": "^4.16.2",
-    "http-server": "^0.10.0",
     "node-hid": "^0.5.7",
     "websocket": "^1.0.25"
   }
