--- a/package.json
+++ b/package.json
@@ -4,16 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "webpack && node index.js",
     "debug": "node debug index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yukke.org",
   "license": "MIT",
   "dependencies": {
+    "assets-webpack-plugin": "^3.5.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "config": "^1.28.1",
+    "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "file-loader": "^1.1.5",
     "node-hid": "^0.5.7",
+    "node-sass": "^4.7.1",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "websocket": "^1.0.25"
+  },
+  "devDependencies": {
+    "webpack": "^3.8.1"
   }
 }
