--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "author": "yukke.org",
   "license": "MIT",
   "dependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/core": "^7.1.6",
-    "@babel/preset-env": "^7.1.6",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "config": "^1.31.0",
-    "express": "^4.16.4",
-    "node-hid": "^0.7.3",
-    "websocket": "^1.0.28"
+    "express": "^4.17.1",
+    "node-hid": "^0.7.9",
+    "websocket": "^1.0.30"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "parcel-bundler": "^1.10.3",
-    "sass": "^1.15.1"
+    "@typescript-eslint/eslint-plugin": "^2.3.3",
+    "@typescript-eslint/parser": "^2.3.3",
+    "cross-env": "^5.2.1",
+    "eslint": "^6.5.1",
+    "parcel-bundler": "^1.12.4",
+    "sass": "^1.23.0"
   }
 }
