--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pcounter.js",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npm run build:frontend; npm run backend",
+    "start": "npm run build:frontend && npm run backend",
     "build:frontend": "parcel build ./frontend/src/index.html -d public",
     "backend": "node server/index.js"
   },
@@ -14,17 +14,18 @@
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
-    "config": "^1.31.0",
+    "@shopify/draggable": "^1.0.0-beta.8",
+    "config": "^3.3.2",
     "express": "^4.17.1",
     "log4js": "^6.3.0",
-    "node-hid": "^0.7.9",
+    "node-hid": "^1.3.1",
     "websocket": "^1.0.32"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "cross-env": "^5.2.1",
-    "eslint": "^6.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.12.0",
     "parcel-bundler": "^1.12.4",
     "sass": "^1.27.0"
   }
